--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
             "registration.php"
         ],
         "psr-4": {
-            "MagedIn\\FrenetUsdConversion\\": ""
+            "MagedIn\\FrenetRatesConversion\\": ""
         }
     },
     "repositories": [
