Updated composer description.

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "magedin/module-frenet-usd-conversion",
     "version": "1.0.0",
-    "description": "This module can be used to convert Frenet quotations from US Dollar to the store currency.",
+    "description": "This module can be used to convert Frenet quotations from a given currency, like US Dollar, to the current store currency.",
     "type": "magento2-module",
     "keywords": [
         "frenet",
